--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 ---
 version: '3'
 services:
-  freqtrade:
+  freqtradekucoin:
     image: freqtradeorg/freqtrade:stable
     # image: freqtradeorg/freqtrade:develop
     # Use plotting image
@@ -11,7 +11,7 @@ services:
     #   context: .
     #   dockerfile: "./docker/Dockerfile.custom"
     restart: unless-stopped
-    container_name: freqtrade
+    container_name: freqtradekucoin
     volumes:
       - "./user_data:/freqtrade/user_data"
     # Expose api on port 8080 (localhost only)
@@ -38,4 +38,4 @@ services:
       --config /freqtrade/user_data/config.private.json
       --config /freqtrade/user_data/strategies/NostalgiaForInfinityX/pairlist-volume-binance-usdt.json
       --config /freqtrade/user_data/strategies/NostalgiaForInfinityX/blacklist-binance.json
-      --strategy NostalgiaForInfinityX
+      --strategy NostalgiaForInfinityX2
