--- a/user_data/config.private.json
+++ b/user_data/config.private.json
@@ -4,7 +4,7 @@
     "fiat_display_currency": "USD",
     "cancel_open_orders_on_exit": false,
     "exchange": {
-        "name": "bybit",
+        "name": "kucoin",
         "key": "",
         "secret": "",
         "ccxt_config": {},
