--- a/user_data/config.private.json
+++ b/user_data/config.private.json
@@ -4,7 +4,7 @@
     "fiat_display_currency": "USD",
     "cancel_open_orders_on_exit": false,
     "exchange": {
-        "name": "huobi",
+        "name": "okx",
         "key": "",
         "secret": "",
         "ccxt_config": {},
@@ -17,7 +17,7 @@
     },
     "telegram": {
         "enabled": true,
-        "token": "6138255021:AAEJpzNN4mXRyXtDFlu_3M__C7s7vvvCtCs",
+        "token": "5907332510:AAFuUUK8H5X9TGGgvDjbrznLicXounbCCok",
         "chat_id": "-1001809436147"
     },
     "api_server": {
